final fix for text overflow

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -129,7 +129,7 @@ input:focus + .slider {
 .projectItem {
   border-radius: 15px;
   width: 325px;
-  height: 370px;
+  height: 390px;
   margin: 40px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
   text-align: center;
